<resources>
    <string name="app_name" translatable="false">Durak Helper</string>
    <string name="new_game_button">New game</string>
    <string name="my_cards_label">My cards</string>
    <string name="friend_cards_label">Friend\'s cards</string>
    <string name="enemy_cards_label">Enemy\'s cards</string>
    <string name="discard_cards_button">Discard cards</string>
    <string name="alert_title">Are you sure?</string>
    <string name="alert_question">All the progress will be lost</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="trump_diamonds">Trump: diamonds (♦)</string>
    <string name="trump_clubs">Trump: clubs (♣)</string>
    <string name="trump_hearts">Trump: hearts (♥)</string>
    <string name="trump_spades">Trump: spades (♠)</string>
</resources>
